--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <title>Frontend Mentor | Product preview card component</title>
   <link rel="stylesheet" href="./css/style.css">
 
@@ -13,27 +20,36 @@
 <body>
 
   <section>
-    <article class="card">
+    <article class="card mt-3 mb-2">
+      <div class="img"></div>
+
+      <div class="conteudo flex p-4">
+        <p class="perfume">Perfume</p>
+
+        <h2 class="pb-2">Gabrielle Essence Eau De Parfum</h2>
+
+        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
+          Perfumer-Creator for the House of CHANEL.
+        </p>
+
+        <div class="valores">
+          <p class="promo">$149.99</p>
+
+          <p class="ml-3">$169.99</p>
+        </div>
+
+        <button class="bttn"><img src="./images/icon-cart.svg" alt=""> Add to cart</button>
+      </div>
 
     </article>
   </section>
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge,
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
 
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.linkedin.com/in/marcelo-herique-ferreira-de-oliveira-403a36243/">Marcelo
+        Oliveira</a>.
     </div>
   </footer>
 </body>
