switched to a picture tag

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
   <section>
     <div class="margin"></div>
     <article class="card mt-3 mb-2">
-      <div class="img"></div>
+      <div class="img">
+        <picture>
+          <source media="(min-width: 450px)" srcset="../images/image-product-desktop.jpg" height="100%" width="100%">
+          <img src="../images/image-product-mobile.jpg" height="100%" width="100%" alt="">
+        </picture>
+      </div>
 
       <div class="conteudo flex p-4">
         <p class="perfume">Perfume</p>
