--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <article class="card mt-3 mb-2">
       <div class="img">
         <picture>
-          <source media="(min-width: 450px)" srcset="../images/image-product-desktop.jpg" height="100%" width="100%">
-          <img src="../images/image-product-mobile.jpg" height="100%" width="100%" alt="">
+          <source media="(min-width: 450px)" srcset="./images/image-product-desktop.jpg" height="100%" width="100%">
+          <img src="./images/image-product-mobile.jpg" height="100%" width="100%" alt="">
         </picture>
       </div>
 
