--- a/index.html
+++ b/index.html
@@ -1,63 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <title>Frontend Mentor | Product preview card component</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <title>Frontend Mentor | Product preview card component</title>
-  <link rel="stylesheet" href="./css/style.css">
-
-</head>
-
-<body>
-
-  <section>
-    <div class="margin"></div>
-    <article class="card mt-3 mb-2">
-      <div class="img">
-        <picture>
-          <source media="(min-width: 450px)" srcset="./images/image-product-desktop.jpg" height="100%" width="100%">
-          <img src="./images/image-product-mobile.jpg" height="100%" width="100%" alt="">
-        </picture>
-      </div>
-
-      <div class="conteudo flex p-4">
-        <p class="perfume">Perfume</p>
-
-        <h2 class="pb-2">Gabrielle Essence Eau De Parfum</h2>
-
-        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
-          Perfumer-Creator for the House of CHANEL.
-        </p>
-
-        <div class="valores">
-          <p class="promo">$149.99</p>
-
-          <p class="ml-3">$169.99</p>
+  <body>
+    <section>
+      <article class="card mt-3 mb-2">
+        <div class="img">
+          <picture>
+            <source
+              media="(min-width: 450px)"
+              srcset="./images/image-product-desktop.jpg"
+              height="100%"
+              width="100%"
+            />
+            <img
+              src="./images/image-product-mobile.jpg"
+              height="100%"
+              width="100%"
+              alt=""
+            />
+          </picture>
         </div>
 
-        <button class="bttn"><img src="./images/icon-cart.svg" alt=""> Add to cart</button>
+        <div class="conteudo flex p-4">
+          <p class="perfume">Perfume</p>
+
+          <h2 class="pb-2">Gabrielle Essence Eau De Parfum</h2>
+
+          <p>
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+
+          <div class="valores">
+            <p class="promo">$149.99</p>
+
+            <p class="ml-3">$169.99</p>
+          </div>
+
+          <button class="bttn">
+            <img src="./images/icon-cart.svg" alt="" /> Add to cart
+          </button>
+        </div>
+      </article>
+    </section>
+
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          href="https://www.linkedin.com/in/marcelo-herique-ferreira-de-oliveira-403a36243/"
+          >Marcelo Oliveira</a
+        >.
       </div>
-
-    </article>
-  </section>
-
-
-  <footer>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.linkedin.com/in/marcelo-herique-ferreira-de-oliveira-403a36243/">Marcelo
-        Oliveira</a>.
-    </div>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
